# CIS509_MCOOK20_FINAL_CODE

./: .env.example  .gitignore  LA1_Cook_Matthew (2).ipynb  LA3_Cook_Matthew (1).ipynb  LA5_Cook_Matthew.ipynb  LICENSE  PRIOR_WORK_INVENTORY.md  PROFESSOR_FEEDBACK.md  PROJECT_BRIEF.md  ProjectEDA_Cook_Matthew.ipynb  README.md  RECEIPT_SCHEMA.md  RUBRIC.md  index.html  lessons.md  pyproject.toml  requirements-base.txt  requirements.txt  run_pipeline.py
.devcontainer/: devcontainer.json  install-base.sh  install-ml.sh  welcome.sh
.github/workflows/: ci.yml  codespaces-prebuild.yml  pages.yml  weekly_refresh.yml
data/: README.md
docs/: CIS509_MCOOK20.pptx  Tabhs cis509 build strategy.md
notebooks/: 01_eda.ipynb  02_vader_sentiment.ipynb  03_bertopic.ipynb  04_llm_methods.ipynb  05_xgboost_tabhs.ipynb
notebooks/_prior_work/: LA2_Cook_Matthew.ipynb  LA4_Cook_Matthew.ipynb  LA6_Cook_Matthew.ipynb
outputs/: dashboard.html  top_10_manipulated.csv
outputs/receipts/: -3-6BB10tIWNKGEF0Es2BA.json  008FLyatMEsZzmmKALIgDg.json  0M--IAwPfqJC9yfmI-EiAA.json  0mkWBczOhKj1QUkQvG86lQ.json  1kKmTmnfDeycQRcYJA-5Zw.json  3StNEgKAwpCFR1q0urmJrw.json  3aY8m5w6UnxXbRMhEUPUMg.json  4r6N_Fhiwoqo_FqQ7Mm6mQ.json  5CX7rtnwYnmqFCihOyWivg.json  5P4w4WfPbXzUi6YALfwx2g.json  5YFqjdNj7HCkDwYjvwG50g.json  5p4p5DknrjuxIUDokYZE9w.json  (+98 more)
scripts/: build_dashboard.py  build_notebooks.py  generate_anchor_receipts.py  update_deck.py
slides/: TABHS_CLEAN.pptx
src/: __init__.py  config.py  data_loader.py  llm_client.py  mcp_server.py  receipts.py  tabhs_pipeline.py
tests/: test_smoke.py
