[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabhs-cis509"
version = "1.0.0"
description = "TABHS, Trust-Adjusted Business Health Score for Arizona restaurants. CIS 509 final project."
authors = [{name = "Matthew Cook", email = "mcook20@asu.edu"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.13"

dependencies = [
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",
    "matplotlib==3.9.2",
    "xgboost==2.1.2",
    "bertopic==0.16.4",
    "umap-learn==0.5.6",
    "hdbscan==0.8.40",
    "sentence-transformers==3.2.1",
    "vaderSentiment==3.3.2",
    "groq==0.13.0",
    "python-dotenv==1.0.1",
    "blake3==0.4.1",
    "jupyter==1.1.1",
    "nbconvert==7.16.4",
    "nbformat==5.10.4",
    "mcp>=1.10,<2.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
]

[project.scripts]
tabhs = "src.tabhs_pipeline:main"
tabhs-mcp = "src.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
